updated image processing to handle rgb values

--- a/notebooks/image_segmenation.ipynb
+++ b/notebooks/image_segmenation.ipynb
@@ -94,25 +94,121 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using rgb values to detect grey reference panel"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the directory containing the JSON files\n",
-    "annotation_dir = '../data/cam1_labeled'\n",
+    "import json\n",
+    "import os\n",
+    "from PIL import Image, ImageDraw, ImageOps\n",
+    "import numpy as np\n",
     "\n",
-    "# List all files in the annotation directory\n",
-    "files = os.listdir(annotation_dir)\n",
+    "# Define grey RGB values and their tolerance ranges\n",
+    "light_grey_rgb = (160, 160, 1600)\n",
+    "normal_grey_rgb = (60, 60, 60)\n",
+    "dark_grey_rgb = (40, 40, 40)\n",
+    "tolerance = 5  # Tolerance range for grey detection\n",
     "\n",
-    "# Loop through the files and rename JSON files\n",
-    "for filename in files:\n",
-    "    if filename.endswith('_json.json'):\n",
-    "        new_filename = filename.replace('_json', '')\n",
-    "        old_filepath = os.path.join(annotation_dir, filename)\n",
-    "        new_filepath = os.path.join(annotation_dir, new_filename)\n",
-    "        os.rename(old_filepath, new_filepath)\n",
-    "        print(f'Renamed: {filename} to {new_filename}')"
+    "def is_within_grey_range(pixel_rgb, grey_rgb, tolerance):\n",
+    "    return all(abs(c - g) <= tolerance for c, g in zip(pixel_rgb, grey_rgb))\n",
+    "\n",
+    "def find_grey_reference_panel(image, grey_rgb_list, tolerance):\n",
+    "    image_np = np.array(image)\n",
+    "    height, width, _ = image_np.shape\n",
+    "    grey_pixels = []\n",
+    "    \n",
+    "    for y in range(height):\n",
+    "        for x in range(width):\n",
+    "            pixel_rgb = tuple(image_np[y, x])\n",
+    "            if any(is_within_grey_range(pixel_rgb, grey_rgb, tolerance) for grey_rgb in grey_rgb_list):\n",
+    "                grey_pixels.append((x, y))\n",
+    "    \n",
+    "    if not grey_pixels:\n",
+    "        print(\"No grey reference panel found.\")\n",
+    "        return None\n",
+    "    \n",
+    "    # Calculate the average position of detected grey pixels\n",
+    "    avg_x = int(np.mean([x for x, y in grey_pixels]))\n",
+    "    avg_y = int(np.mean([y for x, y in grey_pixels]))\n",
+    "    \n",
+    "    return avg_x, avg_y\n",
+    "\n",
+    "def resize_image(image, target_size):\n",
+    "    if image.size == target_size:\n",
+    "        return image\n",
+    "    else:\n",
+    "        return image.resize(target_size)\n",
+    "\n",
+    "def segment_image(json_file, image_folder, output_folder):\n",
+    "    with open(json_file, 'r') as f:\n",
+    "        data = json.load(f)\n",
+    "    \n",
+    "    # Ensure the output folder exists\n",
+    "    os.makedirs(output_folder, exist_ok=True)\n",
+    "    \n",
+    "    for filename in os.listdir(image_folder):\n",
+    "        if not filename.endswith('_1.png'):\n",
+    "            continue\n",
+    "        \n",
+    "        original_img_path = os.path.join(image_folder, filename)\n",
+    "        \n",
+    "        # Check if the original image file exists\n",
+    "        if not os.path.exists(original_img_path):\n",
+    "            print(f\"Error: Original image file '{original_img_path}' not found.\")\n",
+    "            continue\n",
+    "        \n",
+    "        # Open original image\n",
+    "        original_image = Image.open(original_img_path)\n",
+    "        resized_image = resize_image(original_image, (640, 928))\n",
+    "        \n",
+    "        # Convert image to RGB and find grey reference panel\n",
+    "        resized_image_rgb = resized_image.convert('RGB')\n",
+    "        grey_rgb_list = [light_grey_rgb, dark_grey_rgb, normal_grey_rgb]\n",
+    "        grey_center = find_grey_reference_panel(resized_image_rgb, grey_rgb_list, tolerance)\n",
+    "        \n",
+    "        if grey_center is None:\n",
+    "            continue\n",
+    "        \n",
+    "        # Define size of the rectangle to segment\n",
+    "        segment_size = 30\n",
+    "        avg_x, avg_y = grey_center\n",
+    "        x1 = max(0, avg_x - segment_size // 2)\n",
+    "        y1 = max(0, avg_y - segment_size // 2)\n",
+    "        x2 = min(resized_image.width, x1 + segment_size)\n",
+    "        y2 = min(resized_image.height, y1 + segment_size)\n",
+    "        \n",
+    "        # Create a mask image for the region to be kept\n",
+    "        mask = Image.new('L', resized_image.size, 0)\n",
+    "        draw = ImageDraw.Draw(mask)\n",
+    "        draw.rectangle([x1, y1, x2, y2], fill=255)\n",
+    "        \n",
+    "        # Invert the mask so that the region is white and everything else is black\n",
+    "        inverted_mask = ImageOps.invert(mask)\n",
+    "        \n",
+    "        # Apply the inverted mask to segment the image\n",
+    "        segmented_image = Image.composite(resized_image, Image.new('RGB', resized_image.size, (255, 255, 255)), inverted_mask)\n",
+    "        \n",
+    "        # Save the segmented image with a new filename\n",
+    "        new_filename = f\"segmented_{filename}\"\n",
+    "        segmented_img_path = os.path.join(output_folder, new_filename)\n",
+    "        segmented_image.save(segmented_img_path)\n",
+    "        print(f\"Saved segmented image: {segmented_img_path}\")\n",
+    "\n",
+    "# Example usage\n",
+    "json_file_path = '../data/cam1.json'\n",
+    "image_folder = '../data/cam1_rgb/'                # Folder containing images\n",
+    "output_folder = '../data/cam1_segmented/'         # Folder to save segmented images\n",
+    "\n",
+    "# Perform segmentation\n",
+    "segment_image(json_file_path, image_folder, output_folder)"
    ]
   },
   {
@@ -132,13 +228,27 @@
     "    else:\n",
     "        return image.resize(target_size)\n",
     "\n",
-    "def segment_image(json_file, output_folder):\n",
+    "def segment_image(json_file, image_folder, output_folder):\n",
     "    with open(json_file, 'r') as f:\n",
     "        data = json.load(f)\n",
+    "    \n",
+    "    # Ensure the output folder exists\n",
+    "    os.makedirs(output_folder, exist_ok=True)\n",
+    "    \n",
+    "    for filename in os.listdir(image_folder):\n",
+    "        if not filename.endswith('_1.png'):\n",
+    "            continue\n",
+    "\n",
+    "        # Extract image attributes from JSON data\n",
+    "        image_key = \"image_attributes\"\n",
+    "        if image_key not in data:\n",
+    "            print(f\"No segmentation data found for '{filename}'. Skipping.\")\n",
+    "            continue\n",
     "        \n",
-    "    for filename, image_data in data.items():\n",
+    "        image_data = data[image_key]\n",
+    "        \n",
     "        # Construct paths for segmented image and original image\n",
-    "        original_img_path = os.path.join('../data/cam1_rgb', filename)\n",
+    "        original_img_path = os.path.join(image_folder, filename)\n",
     "        \n",
     "        # Check if the original image file exists\n",
     "        if not os.path.exists(original_img_path):\n",
@@ -156,9 +266,8 @@
     "        mask = Image.new('L', resized_image.size, 0)\n",
     "        draw = ImageDraw.Draw(mask)\n",
     "        \n",
-    "        regions_to_remove = []\n",
     "        regions = image_data.get('regions', [])\n",
-    "        for idx, region in enumerate(regions):\n",
+    "        for region in regions:\n",
     "            region_attributes = region.get('region_attributes', {})\n",
     "            if region_attributes:\n",
     "                # If region_attributes is empty, mark for removal\n",
@@ -170,7 +279,6 @@
     "                \n",
     "                # Draw rectangle on mask\n",
     "                draw.rectangle([x, y, x + width, y + height], fill=255)\n",
-    "                regions_to_remove.append(idx)\n",
     "        \n",
     "        # Invert the mask to remove everything except the segmented region\n",
     "        inverted_mask = ImageOps.invert(mask)\n",
@@ -179,17 +287,18 @@
     "        segmented_image = Image.composite(resized_image, Image.new('RGB', resized_image.size, (255, 255, 255)), inverted_mask)\n",
     "        \n",
     "        # Save the segmented image with a new filename\n",
-    "        new_filename = f\"segmented_{os.path.splitext(filename)[0]}.png\"\n",
+    "        new_filename = f\"segmented_{filename}\"\n",
     "        segmented_img_path = os.path.join(output_folder, new_filename)\n",
     "        segmented_image.save(segmented_img_path)\n",
     "        print(f\"Saved segmented image: {segmented_img_path}\")\n",
     "\n",
     "# Example usage\n",
-    "json_file_path = '../data/cam1_test.json'          # Replace with your JSON file path\n",
-    "output_folder = '../data/cam1_rgb/'                # Replace with your output folder path\n",
+    "json_file_path = '../data/cam1.json'\n",
+    "image_folder = '../data/cam1_rgb/'                # Folder containing images\n",
+    "output_folder = '../data/cam1_segmented/'         # Folder to save segmented images\n",
     "\n",
     "# Perform segmentation\n",
-    "segment_image(json_file_path, output_folder)"
+    "segment_image(json_file_path, image_folder, output_folder)"
    ]
   },
   {
@@ -205,9 +314,139 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "delete_directory('../data/cam1_rgb')\n",
+    "delete_directory('../data/cam1_rgb')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "delete_directory('../data/cam1_segmented')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from PIL import Image, ImageEnhance\n",
+    "from skimage import morphology\n",
+    "from skimage.segmentation import clear_border\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.ndimage import binary_fill_holes\n",
     "\n",
-    "# delete_directory('../data/cam1_labeled')"
+    "def preprocess_image(image_path):\n",
+    "    # Load the image\n",
+    "    image = Image.open(image_path)\n",
+    "    image_np = np.array(image)\n",
+    "    \n",
+    "    # Extract the 640x928 region (assume the entire image is already in this size for simplicity)\n",
+    "    rgb = image_np[:928, :640]\n",
+    "    \n",
+    "    # Split the RGB channels\n",
+    "    r, g, b = rgb[:, :, 0], rgb[:, :, 1], rgb[:, :, 2]\n",
+    "    \n",
+    "    # Extract a 100x100 square from the top right corner of the RGB image\n",
+    "    sky = rgb[:100, -100:]\n",
+    "    \n",
+    "    # Split the RGB channels of the sky image\n",
+    "    rs, gs, bs = sky[:, :, 0], sky[:, :, 1], sky[:, :, 2]\n",
+    "    \n",
+    "    # Calculate the absolute difference between green and blue channels\n",
+    "    gb_diff = np.abs(g - b)\n",
+    "    \n",
+    "    # Create a binary image by thresholding\n",
+    "    gb_binary = gb_diff < 2\n",
+    "    \n",
+    "    # Remove objects connected to the border of the image\n",
+    "    gb_cleared = morphology.remove_small_objects(gb_binary, min_size=300)\n",
+    "    \n",
+    "    # Fill holes in the binary image\n",
+    "    gb_filled = binary_fill_holes(gb_cleared)\n",
+    "    \n",
+    "    # Convert numpy array back to PIL image\n",
+    "    gb_filled_img = Image.fromarray((gb_filled * 255).astype(np.uint8))\n",
+    "    \n",
+    "    # Show the processed images\n",
+    "    plt.figure()\n",
+    "    plt.subplot(1, 2, 1)\n",
+    "    plt.imshow(gb_diff, cmap='gray')\n",
+    "    plt.title('Green-Blue Difference')\n",
+    "\n",
+    "    plt.subplot(1, 2, 2)\n",
+    "    plt.imshow(gb_filled, cmap='gray')\n",
+    "    plt.title('Processed Binary Image')\n",
+    "    plt.show()\n",
+    "\n",
+    "    return gb_filled_img\n",
+    "\n",
+    "def adjust_brightness(image_path):\n",
+    "    # Load the image\n",
+    "    image = Image.open(image_path)\n",
+    "    image_np = np.array(image)\n",
+    "    \n",
+    "    # Extract a 100x100 square from the top right corner of the image\n",
+    "    sky = image_np[:100, -100:]\n",
+    "    \n",
+    "    # Calculate the average red, green, and blue values\n",
+    "    avg_r = np.mean(sky[:, :, 0])\n",
+    "    avg_g = np.mean(sky[:, :, 1])\n",
+    "    avg_b = np.mean(sky[:, :, 2])\n",
+    "    \n",
+    "    # Calculate the overall brightness factor as the average of the RGB components\n",
+    "    brightness_factor = (avg_r + avg_g + avg_b) / (3 * 255)\n",
+    "    \n",
+    "    # Brighten the image by scaling RGB values\n",
+    "    enhancer = ImageEnhance.Brightness(image)\n",
+    "    brightened_image = enhancer.enhance(brightness_factor)\n",
+    "    \n",
+    "    return brightened_image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example usage\n",
+    "image_path = '../data/cam1_rgb/date_1-5-2024_10.0.11_1.png'\n",
+    "segmented_image = preprocess_image(image_path)\n",
+    "\n",
+    "# Save the processed images\n",
+    "segmented_image.save('../data/segmented_image.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "brightened_image = adjust_brightness(image_path)\n",
+    "\n",
+    "# Save the processed images\n",
+    "brightened_image.save('../data/brightened_image.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the image\n",
+    "image = Image.open('../data/cam1_rgb/date_1-5-2024_10.0.11_1.png')\n",
+    "\n",
+    "# Crop the image (left, upper, right, lower)\n",
+    "cropped_image = image.crop((0, 0, 640, 928))\n",
+    "\n",
+    "# Save the cropped image\n",
+    "cropped_image.save('../data/cropped_image.png')"
    ]
   },
   {
@@ -234,7 +473,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
