simplified image segmentation

--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello World\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "# import torch\n",
@@ -24,9 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing complete. The right half of the images have been saved to the destination directory.\n"
+     ]
+    }
+   ],
    "source": [
     "# Create the 'cam1_rgb' directory\n",
     "\n",
