simplified image segmentation notebook

--- a/notebooks/image_segmenation.ipynb
+++ b/notebooks/image_segmenation.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dependencies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -20,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Splitting cam1 image into rgb and multispectral images"
+    "### Splitting Cam Images (928 x 1280) into 2 Total Images: 1 Multispectral Image (928 x 640) and 1 RGB Image (928 x 640)"
    ]
   },
   {
@@ -29,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def save_right_side_images(input_folder, output_folder_rgb):\n",
+    "def process_rgb_images(input_folder, output_folder_rgb):\n",
     "    # List all camera folders\n",
     "    cam_folders = [f'cam{i}' for i in range(1, 9)]\n",
     "\n",
@@ -56,11 +63,11 @@
     "                right_half = img.crop((640, 0, 1280, 928))\n",
     "                \n",
     "                # Save the right half\n",
-    "                right_half.save(os.path.join(output_cam_rgb_path, f'{os.path.splitext(filename)[0]}_right{os.path.splitext(filename)[1]}'))\n",
+    "                right_half.save(os.path.join(output_cam_rgb_path, f'{os.path.splitext(filename)[0]}{os.path.splitext(filename)[1]}'))\n",
     "                \n",
     "                print(f\"Processed right side of {filename}\")\n",
     "\n",
-    "def save_left_side_images(input_folder, output_folder_ir):\n",
+    "def process_nir_images(input_folder, output_folder_ir):\n",
     "    # List all camera folders\n",
     "    cam_folders = [f'cam{i}' for i in range(1, 9)]\n",
     "\n",
@@ -87,7 +94,7 @@
     "                left_half = img.crop((0, 0, 640, 928))\n",
     "                \n",
     "                # Save the left half\n",
-    "                left_half.save(os.path.join(output_cam_ir_path, f'{os.path.splitext(filename)[0]}_left{os.path.splitext(filename)[1]}'))\n",
+    "                left_half.save(os.path.join(output_cam_ir_path, f'{os.path.splitext(filename)[0]}{os.path.splitext(filename)[1]}'))\n",
     "                \n",
     "                print(f\"Processed left side of {filename}\")\n",
     "\n",
@@ -97,16 +104,9 @@
     "output_folder_ir = '../data/'\n",
     "\n",
     "# Run the functions\n",
-    "save_right_side_images(input_folder, output_folder_rgb)\n",
-    "save_left_side_images(input_folder, output_folder_ir)"
+    "process_rgb_images(input_folder, output_folder_rgb)\n",
+    "process_nir_images(input_folder, output_folder_ir)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
