removed yolov5m.pt file

--- a/notebooks/image_segmenation.ipynb
+++ b/notebooks/image_segmenation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dependencies"
+    "## **Dependencies**"
    ]
   },
   {
@@ -14,12 +14,12 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import torch\n",
     "import cv2\n",
+    "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import shutil\n",
-    "from yolov5 import YOLOv5\n",
+    "import rasterio\n",
     "from PIL import Image"
    ]
   },
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Splitting Cam Images (928 x 1280) into 2 Total Images: 1 Multispectral Image (928 x 640) and 1 RGB Image (928 x 640)"
+    "## **Splitting Cam Images (928 x 1280) into 2 Total Images: 1 Multispectral Image (928 x 640) and 1 RGB Image (928 x 640)**"
    ]
   },
   {
@@ -73,7 +73,7 @@
     "\n",
     "    for cam in cam_folders:\n",
     "        cam_path = os.path.join(input_folder, cam)\n",
-    "        output_cam_ir_path = os.path.join(output_folder_ir, f'{cam}_ir')\n",
+    "        output_cam_ir_path = os.path.join(output_folder_ir, f'{cam}_nir')\n",
     "        \n",
     "        os.makedirs(output_cam_ir_path, exist_ok=True)\n",
     "        \n",
@@ -98,15 +98,49 @@
     "                \n",
     "                print(f\"Processed left side of {filename}\")\n",
     "\n",
-    "# Define your input and output folders\n",
+    "# Input and output folders\n",
     "input_folder = '../data'\n",
     "output_folder_rgb = '../data/'\n",
     "output_folder_ir = '../data/'\n",
     "\n",
     "# Run the functions\n",
-    "process_rgb_images(input_folder, output_folder_rgb)\n",
+    "# process_rgb_images(input_folder, output_folder_rgb)\n",
     "process_nir_images(input_folder, output_folder_ir)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 1: Do Radiometric Correction on Reference Panels\n",
+    "### Step 2: Labelling - aka Find ROIs (Region of Interests)\n",
+    "### Step ???: Use AlexNet to Segment Wheat Plot Fields\n",
+    "### Step 3: Compute VI (Vegetation Indices)\n",
+    "### Step 4: Extract Data -> Summaries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Calculating Radiometric Reflectance on Reference Panels**\n",
+    "\n",
+    "find the average value of RGB, NIR of gray panel for each image...\n",
+    "Then, divide each pixek in R band by average value of gray panel in red band.  repeat this for 6 bands. This becom4es reflectance image.\n",
+    "Register NRI images to RGB images.  You could even use the gray panel is registration points...\n",
+    "Calculate NDVI at each pixel.\n",
+    "NDFVI = (NRI-Red)/(NRI+red).  But you have 3 NIR bands.  Which one should be used?\n",
+    "Either segment whole wheat field from reflectance image or NDVI image.\n",
+    "Then, use logic to divide the wheat field into plots.\n",
+    "Find ststaitsics of NDVI from each plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
