added files to assets folder

--- a/notebooks/image_segmenation.ipynb
+++ b/notebooks/image_segmenation.ipynb
@@ -137,6 +137,157 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "csv_files = [f for f in os.listdir('../model_output/') if f.endswith('.csv')]\n",
+    "\n",
+    "# Overite each csv file with the sorted csv_files\n",
+    "for i, csv_file in enumerate(csv_files):\n",
+    "    os.rename(f'../model_output/{csv_file}', f'../model_output/cam{i+1}_output.csv')\n",
+    "    \n",
+    "# Overwrite each csv file after removing any rows in Center_X that are NaN or greater than 640\n",
+    "for i, csv_file in enumerate(csv_files):\n",
+    "    df = pd.read_csv(f'../model_output/cam{i+1}_output.csv')\n",
+    "    df = df.dropna(subset=['Center_X'])\n",
+    "    df = df[df['Center_X'] < 640]\n",
+    "    df.to_csv(f'../model_output/cam{i+1}_output.csv', index=False)\n",
+    "    \n",
+    "# Overwrite each csv file after removing any rows in Center_Y that are NaN\n",
+    "for i, csv_file in enumerate(csv_files):\n",
+    "    df = pd.read_csv(f'../model_output/cam{i+1}_output.csv')\n",
+    "    df = df.dropna(subset=['Center_Y'])\n",
+    "    df.to_csv(f'../model_output/cam{i+1}_output.csv', index=False)\n",
+    "    \n",
+    "# Sort and Overwrite each csv file by filename\n",
+    "for i, csv_file in enumerate(csv_files):\n",
+    "    df = pd.read_csv(f'../model_output/cam{i+1}_output.csv')\n",
+    "    df = df.sort_values(by='Filename')\n",
+    "    df.to_csv(f'../model_output/cam{i+1}_output.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Go through each camera and plot the Center_X and Center_Y values\n",
+    "output_folder = '../assets'\n",
+    "\n",
+    "for i, df in enumerate(dfs):\n",
+    "    plt.figure(figsize=(10, 5))\n",
+    "    plt.scatter(df['Center_X'], df['Center_Y'], s=1)\n",
+    "    plt.title(f'Camera {i+1}')\n",
+    "    plt.xlabel('Center_X')\n",
+    "    plt.ylabel('Center_Y')\n",
+    "    plt.xlim(0, 640)\n",
+    "    plt.ylim(0, 928)\n",
+    "    plt.gca().invert_yaxis()\n",
+    "    plt.savefig(f'{output_folder}/camera_{i+1}_scatter.png')\n",
+    "    plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "import os\n",
+    "\n",
+    "def calculate_panel_rgb_values(csv_file, image_folder):\n",
+    "    # Load the CSV file\n",
+    "    data = pd.read_csv(csv_file)\n",
+    "    \n",
+    "    # Filter out rows where Center_X is greater than 640\n",
+    "    data = data[data['Center_X'] <= 640]\n",
+    "    \n",
+    "    # List to store the results\n",
+    "    results = []\n",
+    "\n",
+    "    print(f\"Processing {len(data)} rows from {csv_file}\")\n",
+    "\n",
+    "    for index, row in data.iterrows():\n",
+    "        filename = row['Filename']\n",
+    "        center_x = row['Center_X']\n",
+    "        center_y = row['Center_Y']\n",
+    "        \n",
+    "        # Construct the path to the image file\n",
+    "        image_path = os.path.join(image_folder, filename)\n",
+    "        \n",
+    "        # Check if the file exists\n",
+    "        if not os.path.exists(image_path):\n",
+    "            print(f\"File does not exist: {image_path}\")\n",
+    "            continue\n",
+    "        \n",
+    "        # Load the image\n",
+    "        image = cv2.imread(image_path)\n",
+    "        \n",
+    "        # Check if the image was loaded successfully\n",
+    "        if image is None:\n",
+    "            print(f\"Could not load image: {image_path}\")\n",
+    "            continue\n",
+    "        \n",
+    "        # Extract a 5x5 region around the center coordinates\n",
+    "        x_start = max(0, center_x - 5)\n",
+    "        x_end = min(image.shape[1], center_x + 5)\n",
+    "        y_start = max(0, center_y - 5)\n",
+    "        y_end = min(image.shape[0], center_y + 5)\n",
+    "        \n",
+    "        region = image[y_start:y_end, x_start:x_end]\n",
+    "        \n",
+    "        # Calculate the average RGB values\n",
+    "        average_color = region.mean(axis=(0, 1))\n",
+    "        \n",
+    "        # Append the result\n",
+    "        results.append({\n",
+    "            'Filename': filename,\n",
+    "            'Center_X': center_x,\n",
+    "            'Center_Y': center_y,\n",
+    "            'Average_R': average_color[2],\n",
+    "            'Average_G': average_color[1],\n",
+    "            'Average_B': average_color[0]\n",
+    "        })\n",
+    "    \n",
+    "    # Convert the results to a DataFrame\n",
+    "    results_df = pd.DataFrame(results)\n",
+    "    \n",
+    "    return results_df\n",
+    "\n",
+    "# Define folder paths\n",
+    "csv_files = [f\"../model_output/cam{i}_centers.csv\" for i in range(1, 9)]\n",
+    "image_folders = [f\"../model_output/cam{i}\" for i in range(1, 9)]\n",
+    "\n",
+    "# Iterate over the CSV files and calculate the average RGB values\n",
+    "for csv_file, image_folder in zip(csv_files, image_folders):\n",
+    "    print(f\"Processing {csv_file} with images from {image_folder}\")\n",
+    "    result_df = calculate_panel_rgb_values(csv_file, image_folder)\n",
+    "    print(f\"Processed {len(result_df)} images for {csv_file}\")\n",
+    "    print(result_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Count the number of images in each camera folder in the model_output directory\n",
+    "cam_folders = [f'cam{i}' for i in range(1, 9)]\n",
+    "\n",
+    "for cam in cam_folders:\n",
+    "    cam_path = os.path.join('../model_output', cam)\n",
+    "    num_images = len([f for f in os.listdir(cam_path) if f.endswith('.png')])\n",
+    "    print(f\"{cam}: {num_images} images\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -156,7 +307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
