updated image_segmentation to have valid content in each csv file

--- a/notebooks/detect.ipynb
+++ b/notebooks/detect.ipynb
@@ -21,7 +21,7 @@
     "os.path.abspath(os.getcwd())\n",
     "\n",
     "# Change the directory to the 'yolov' directory\n",
-    "os.chdir('../model/yolov/')\n",
+    "os.chdir('../model/panel/')\n",
     "\n",
     "# Run the 'detect.py' script\n",
     "!python3 detect.py"
