Added functionality to calculate ndvi and saving images to asset folder

--- a/notebooks/image_segmenation.ipynb
+++ b/notebooks/image_segmenation.ipynb
@@ -109,7 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 1: Do Radiometric Reflectance Correction on Reference Panels\n",
+    "### Step 1: Do Radiometric Reflectance Correction on Reference Panels ✔️\n",
     "### Step 2: Labelling - aka Find ROIs (Region of Interests)\n",
     "### Step ???: Use AlexNet to Segment Wheat Plot Fields\n",
     "### Step 3: Compute VI (Vegetation Indices)\n",
@@ -292,10 +292,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import numpy as np\n",
     "import cv2\n",
     "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
     "\n",
     "def ndvi(nir, x_center, y_center):\n",
     "    gray = nir[y_center-5:y_center+5, x_center-5:x_center+5, :]\n",
@@ -309,7 +309,6 @@
     "    nir_green_ref = nir_green / gray_green_avg\n",
     "    nir_blue_ref = nir_blue / gray_blue_avg\n",
     "    \n",
-    "    # ndvi = (nir_red_ref - nir_blue_ref) / (nir_red_ref + nir_blue_ref)\n",
     "    ndvi = ((1.664 * nir_blue_ref) / (0.953 * nir_red_ref)) - 1\n",
     "\n",
     "    # Plot the NDVI image\n",
@@ -322,35 +321,65 @@
     "    \n",
     "    return ndvi\n",
     "\n",
-    "# Call the function for each camera in the dataset\n",
-    "for i in range(1, 9):\n",
-    "    # Load the center coordinates from CSV file\n",
-    "    centers_df = pd.read_csv(f'../data/cam{i}_centers.csv')\n",
-    "    \n",
-    "    # Assume the CSV file has columns named 'x' and 'y' for the coordinates\n",
-    "    x_center = int(centers_df['Center_X'].values[0])\n",
-    "    y_center = int(centers_df['Center_Y'].values[0])\n",
-    "    \n",
-    "    # NIR image path\n",
-    "    nir_image_path = f'../data/cam{i}_nir/'\n",
-    "    \n",
-    "    # Load the NIR image\n",
-    "    nir_image = cv2.imread(nir_image_path)\n",
-    "    \n",
-    "    # Calculate the NDVI\n",
-    "    ndvi_image = ndvi(nir_image, x_center=x_center, y_center=y_center)\n",
-    "    print(f\"Processed NDVI for Camera {i}\")\n",
-    "    \n",
-    "    # Save the NDVI image\n",
-    "    cv2.imwrite(f'../assets/cam{i}_ndvi.png', ndvi_image)"
+    "def process_ndvi():\n",
+    "    for i in range(1, 9):\n",
+    "        nir_folder = f'../data/cam{i}_nir'\n",
+    "        ndvi_folder = f'../assets/cam{i}_ndvi'\n",
+    "        \n",
+    "        # Create the output folder if it doesn't exist\n",
+    "        if not os.path.exists(ndvi_folder):\n",
+    "            os.makedirs(ndvi_folder)\n",
+    "        \n",
+    "        for filename in os.listdir(nir_folder):\n",
+    "            if filename.endswith('.png'):\n",
+    "                nir_path = os.path.join(nir_folder, filename)\n",
+    "                nir_image = cv2.imread(nir_path)\n",
+    "                \n",
+    "                # Assuming the center is the middle of the image\n",
+    "                x_center = nir_image.shape[1] // 2\n",
+    "                y_center = nir_image.shape[0] // 2\n",
+    "                \n",
+    "                ndvi_image = ndvi(nir_image, x_center, y_center)\n",
+    "                \n",
+    "                # Save the NDVI image\n",
+    "                output_path = os.path.join(ndvi_folder, filename)\n",
+    "                cv2.imwrite(output_path, ndvi_image * 255)\n",
+    "\n",
+    "# Run the function\n",
+    "process_ndvi()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random\n",
+    "\n",
+    "def save_ndvi_images():\n",
+    "    selected_folder = '../assets/ndvi_selected/'\n",
+    "    \n",
+    "    # Create the selected images folder if it doesn't exist\n",
+    "    if not os.path.exists(selected_folder):\n",
+    "        os.makedirs(selected_folder)\n",
+    "    \n",
+    "    for i in range(1, 10):\n",
+    "        ndvi_folder = f'../assets/cam{i}_ndvi'\n",
+    "        \n",
+    "        if os.path.exists(ndvi_folder):\n",
+    "            ndvi_images = [f for f in os.listdir(ndvi_folder) if f.endswith('.png')]\n",
+    "            \n",
+    "            if ndvi_images:\n",
+    "                random_image = random.choice(ndvi_images)\n",
+    "                src_path = os.path.join(ndvi_folder, random_image)\n",
+    "                dst_path = os.path.join(selected_folder, f'cam{i}_selected.png')\n",
+    "                \n",
+    "                cv2.imwrite(dst_path, cv2.imread(src_path))\n",
+    "\n",
+    "# Select random images from each camera\n",
+    "save_ndvi_images()"
+   ]
   }
  ],
  "metadata": {
